gcc/testsuite/g++.dg/init/array32.C
// PR c++/42315

extern int x[];

int i = x[0];

int x[] = 0;			// { dg-error "" }
